# OStim-Size-Difference-Manager

./: .gitignore  LICENSE  README.md  TODO.md  build.ps1
data/: OStimSizeDifferenceManager.esp
data/SKSE/Plugins/: OStimSizeDifferenceManager-Signatures.json  OStimSizeDifferenceManager.ini  signatures.json
data/Scripts/: OSizeDiffMCM.pex
data/Source/Scripts/: OSizeDiffMCM.psc
docs/: ARCHITECTURE.md
skse/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
skse/src/: Main.cpp  PCH.h  Plugin.h
skse/src/AddressResolution/: PatternScanner.cpp  PatternScanner.h  PdbResolver.cpp  PdbResolver.h  VersionGate.cpp  VersionGate.h
skse/src/Config/: Config.cpp  Config.h
skse/src/Hooks/: FilterContext.cpp  FilterContext.h  GetRandomNodeHook.cpp  GetRandomNodeHook.h  MenuFilterHook.cpp  MenuFilterHook.h  NavigationHook.cpp  NavigationHook.h  RandomNodeTwoPass.h  ThreadContextHook.cpp  ThreadContextHook.h
skse/src/Matching/: HeightMatcher.cpp  HeightMatcher.h
skse/src/OStimAPI/: OStimInterface.h  OstimNGThreadAPI.h
skse/src/OStimTypes/: ActorCondition.h  FurnitureType.h  Navigation.h  Node.h  ThreadManager.h
skse/src/SceneCache/: SceneCache.cpp  SceneCache.h  SceneLoader.cpp  SceneLoader.h
skse/src/UI/: Menu.cpp  Menu.h  SKSEMenuFramework.h
skse/src/Util/: Log.cpp  Log.h  Logger.h  State.cpp  State.h  Tls.h
skse/tools/resolve_symbol/: main.cpp
